--- a/StormWeb/Views/Shared/_Layout.cshtml
+++ b/StormWeb/Views/Shared/_Layout.cshtml
@@ -8,8 +8,9 @@
     @{ Html.EnableClientValidation(); }
 
     @using StormWeb.Helper
-    @*@if (NotificationHandler.hasNotification())
+    @if (NotificationHandler.hasNotification())
     {
+    string[] noty = NotificationHandler.getNotification();
         <script>
          $(function () {
                 $.pnotify({
@@ -20,24 +21,8 @@
                  });
                  });
         </script>    
-    *@
-    @{
-        string[] noty = NotificationHandler.getNotification();
-        
-        string text = noty[2] + " " + noty[1] + " " + noty[0];
-        
-        <script>
-            $(function () {
-                $.pnotify({
-                    title: '@(text)',
-                    text: '@(text)',
-                    type: 'success',
-                    history: false
-                });
-            });
-        </script>  
-        }
-    @*}*@
+       
+    }
 
 </head>
 <body>
